<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/itm_list_student"
        android:icon="@drawable/ic_list"
        android:title="@string/list_user">
    </item>

    <item
        android:id="@+id/nav_create_password"
        android:icon="@drawable/ic_password"
        android:title="@string/new_password">
    </item>

    <item
        android:id="@+id/edit_password"
        android:icon="@drawable/ic_edit"
        android:title="@string/edit_user">
    </item>

    <item
        android:id="@+id/nav_delete_password"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete_user">
    </item>

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout">
    </item>

</menu>